# evil-backend

./: Cargo.toml  README.md  backend.dockerfile  docker-compose.yml  init.sql
.nginx/: nginx.conf
migrations/2023-09-28-225733_create_products/: up.sql
migrations/2023-10-03-170838_create_categories/: down.sql  up.sql
migrations/2023-10-03-171232_change_product_catagory_fk/: down.sql  up.sql
migrations/2023-10-03-180846_reorder_products/: down.sql  up.sql
migrations/2023-10-04-020607_create_users/: up.sql
migrations/2023-10-04-185227_add_create_date_to_products/: down.sql  up.sql
migrations/2023-10-04-212427_create_cart_items/: down.sql  up.sql
migrations/2023-10-07-184528_add_roles_users/: down.sql  up.sql
migrations/2023-10-15-053709_change_product_id_type/: down.sql  up.sql
migrations/2023-10-15-071032_add_product_pictures/: down.sql  up.sql
migrations/2023-10-17-171803_add_price_id/: down.sql  up.sql
migrations/2023-10-17-193815_add_archive_to_products/: down.sql  up.sql
migrations/2023-10-19-182522_add_stripe_id/: down.sql  up.sql
migrations/2023-10-28-025837_create_orders/: up.sql
migrations/2024-01-16-021711_change_inventory_nullable/: down.sql  up.sql
migrations/2024-01-25-132332_add_product-variants/: down.sql  up.sql
migrations/2024-03-04-015335_add_address_to_orders/: down.sql  up.sql
migrations/2024-03-04-221457_change_cart_pk/: down.sql  up.sql
postgres-data/global/: 1214  1214_vm  1232  1233  1260  1262  2671  2672  2676  pg_control  (+1 more)
src/: main.rs  routes.rs  schema.rs  server.rs
tests/: products.rs  users.rs
(+295 files in other folders)
