[package]
name = "evil-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
async-stripe = { version = "0.34.0", default-features = false, features = ["runtime-tokio-hyper", "checkout", "connect", "webhook-events"] }
bigdecimal = { version = "0.4.1", features = ["serde"] }
cached = { version = "0.46.0", features = ["async"] }
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.2", features = ["postgres", "r2d2", "chrono", "numeric", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"